--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,6 +1,3 @@
-<div>
-<h3>Liste des utilisateurs:</h3>
-<ul>
-<li ng-repeat="user in users"> {{user.name}}, {{user.surname}}</li>
-</ul>
-</div>
+<input type="text" ng-model ="name">
+<button ng-click="getName('titi')">bouton</button>
+<p>Hello {{name}}</p>
